--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 						<header>
 							<h2>Serena Tramm</h2>
 							<p>Instrument Operations Systems Engineer at JPL<br />
-							M.S. Astrophysics</p>
+							</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="images/headshot_grey.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
