--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>The Cosmic Infrared Background Experiment</h2>
+										<p>A Sounding Rocket Instrument to Measure Fluctuations in the Extragalactic Background Light</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -107,7 +107,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/mega-constellation-satellites-on-the-horizon-1920x1080_tcm78-161786.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Interdum felis blandit praesent sed augue</h2>
