--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">Research</a>
 								<ul>
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
@@ -38,8 +38,9 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="elements.html">Industry</a></li>
+							<li><a href="elements.html">Resume</a></li>
+							<li><a href="#" class="button primary">Contact</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -94,8 +95,8 @@
 					<span class="image fit main"><img src="images/fir.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>Fourier Transform Spectrometer</h2>
+							<p>Cryogenic Far-Infrared Fourier Transform Spectrometer for Calibrating On-Chip Spectrometer Technology</p>
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
@@ -110,8 +111,8 @@
 					<span class="image fit main bottom"><img src="images/mega-constellation-satellites-on-the-horizon-1920x1080_tcm78-161786.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Mission Operations and Systems Engineering</h2>
+							<p>Experience at Northrop Grumman in Orbital Mechanics and Deployment Timelines</p>
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
@@ -132,18 +133,23 @@
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Undergraduate</h3>
+									<p>B.S. Mechanical Engineering (2020)</p>
+									<p>Minor in Physics</p>
+									<p>Bucknell University</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Graduate</h3>
+									<p>M.S. Astrophysics (2022)</p>
+									<p>Rochester Institute of Technology</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Honors</h3>
+									<p>RIT AST Opportunity Fellowship</p>
+									<p>Bucknell Presidential Fellowship</p>
+									<p>Tau Beta Pi Engineering Honor Society</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
