--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
 									<h3>Undergraduate</h3>
-									<p>B.S. Mechanical Engineering (2020)</p>
-									<p>Minor in Physics</p>
-									<p>Bucknell University</p>
+									<p>B.S. Mechanical Engineering (2020)<p>
+									<p>Minor in Physics<p>
+									<p>Bucknell University<p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
