--- a/index.html
+++ b/index.html
@@ -134,43 +134,75 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-chart-area"></span>
 									<h3>Undergraduate</h3>
-									<p>B.S. Mechanical Engineering (2020)<p>
-									<p>Minor in Physics<p>
-									<p>Bucknell University<p>
+									<p>
+										"B.S. Mechanical Engineering (2020)"
+										<br>
+										"Minor in Physics"
+										<br>
+										"Bucknell University"
+									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
 									<h3>Graduate</h3>
-									<p>M.S. Astrophysics (2022)</p>
-									<p>Rochester Institute of Technology</p>
+									<p>
+										"M.S. Astrophysics (2022)"
+										<br>
+										"Rochester Institute of Technology"
+									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
 									<h3>Honors</h3>
-									<p>RIT AST Opportunity Fellowship</p>
-									<p>Bucknell Presidential Fellowship</p>
-									<p>Tau Beta Pi Engineering Honor Society</p>
+									<p>
+										"RIT AST Opportunity Fellowship"
+										<br>
+										"Bucknell Presidential Fellowship"
+										<br>
+										"Tau Beta Pi Engineering Honor Society"
+									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Software</h3>
+									<p>
+										"SolidWorks"
+										<br>
+										"Python"
+										<br>
+										"Matlab"
+										<br>
+										"Zemax"
+									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Machining</h3>
+									<p>
+										"Mill & Lathe"
+										<br>
+										"3D Printing"
+										<br>
+										"General Machining Processes"
+									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<h3>Leadership</h3>
+									<p>
+										"Undergraduate and Graduate Research Mentor"
+										<br>
+										"Northrop Grumman Intern Council"
+										<br>
+										"American Physical Society RIT Chapter Chair"
+										<br>
+									</p>
 								</section>
 							</div>
 						</div>
 						<footer class="major">
 							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="#" class="button">Download Resume PDF</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -180,13 +212,13 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Contact Me</h2>
+							<p>Fill in your email below if you would like to get in contact.</p>
 						</header>
 						<form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
+								<div class="col-4 col-12-xsmall"><input type="submit" value="Send" class="fit primary" /></div>
 							</div>
 						</form>
 					</div>
@@ -195,15 +227,14 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/serenatramm" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/serena-tramm/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.instagram.com/s.tramm/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/serenatramm" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="mailto:serena.tramm@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Serena Tramm (2022). All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
