--- a/index.html
+++ b/index.html
@@ -135,66 +135,66 @@
 									<span class="icon solid alt major fa-chart-area"></span>
 									<h3>Undergraduate</h3>
 									<p>
-										"B.S. Mechanical Engineering (2020)"
+										B.S. Mechanical Engineering (2020)
 										<br>
-										"Minor in Physics"
+										Minor in Physics
 										<br>
-										"Bucknell University"
+										Bucknell University
 									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
 									<h3>Graduate</h3>
 									<p>
-										"M.S. Astrophysics (2022)"
+										M.S. Astrophysics (2022)
 										<br>
-										"Rochester Institute of Technology"
+										Rochester Institute of Technology
 									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
 									<h3>Honors</h3>
 									<p>
-										"RIT AST Opportunity Fellowship"
+										RIT AST Opportunity Fellowship
 										<br>
-										"Bucknell Presidential Fellowship"
+										Bucknell Presidential Fellowship
 										<br>
-										"Tau Beta Pi Engineering Honor Society"
+										Tau Beta Pi Engineering Honor Society
 									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
 									<h3>Software</h3>
 									<p>
-										"SolidWorks"
+										SolidWorks
 										<br>
-										"Python"
+										Python
 										<br>
-										"Matlab"
+										Matlab
 										<br>
-										"Zemax"
+										Zemax
 									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-file"></span>
 									<h3>Machining</h3>
 									<p>
-										"Mill & Lathe"
+										Mill & Lathe
 										<br>
-										"3D Printing"
+										3D Printing
 										<br>
-										"General Machining Processes"
+										General Machining Processes
 									</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-lock"></span>
 									<h3>Leadership</h3>
 									<p>
-										"Undergraduate and Graduate Research Mentor"
+										Undergraduate and Graduate Research Mentor
 										<br>
-										"Northrop Grumman Intern Council"
+										Northrop Grumman Intern Council
 										<br>
-										"American Physical Society RIT Chapter Chair"
+										American Physical Society RIT Chapter Chair
 										<br>
 									</p>
 								</section>
